Fix scrollbar: replace scrollbar-gutter stable (causes blank gutter) with overflow-y scroll on html

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ a:hover {
 }
 
 html {
-  scrollbar-gutter: stable;
+  overflow-y: scroll;
 }
 
 body {
